# flutter_rust_bridge

./: justfile  pubspec.yaml
ios/Runner.xcodeproj/: project.pbxproj
lib/: bridge_definitions.dart  bridge_definitions.freezed.dart  bridge_generated.dart
macos/: libnative.dylib
native/: Cargo.toml  justfile
native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs
